# weather-forecast-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/defines/: functions.rs  mod.rs  structs.rs
