[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
